--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "node": ">=6.14.2"
   },
   "dependencies": {
-    "@abandonware/noble": "^1.9.2-10",
+    "noble": "https://github.com/mplutka/noble.git",
     "bindings": "~1.3.0",
     "napi-thread-safe-callback": "0.0.6",
     "node-addon-api": "^2.0.0",
